Fixed some flex-flow issues, menu now wraps and header images scale

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body {
 
 .header .wrapper {
     display: flex;
+    flex-flow: row nowrap;
 }
 
 .header .wrapper .col-left {
@@ -47,22 +48,15 @@ body {
 }
 
 .header .wrapper .col-right {
-    flex: 1;
     margin: 0 1.1em;
 }
 
 .header .wrapper .col-left img {
     display: block;
-    margin:auto;
+    margin: auto;
     padding-top: 1.5em;
     max-width: 80%;
     width: auto;
-}
-
-.header .wrapper .col-right img {
-    display: block;
-    margin:auto;
-    width: 100%;
 }
 
 
@@ -81,7 +75,7 @@ body {
     width: auto;
     max-width: 75%;
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
     margin: auto;
 }
 
